<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".make_your_route">

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="100dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/start_from"
        android:theme="@style/ListItemMainStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/route_start_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/end_at"
        android:theme="@style/ListItemMainStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_start_zone" />

    <TextView
        android:id="@+id/route_end_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:text="@string/cost"
        android:theme="@style/ListItemMainStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_end_zone" />

    <TextView
        android:id="@+id/route_cost"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <ListView
        android:id="@+id/selected_microbuses_list"
        android:layout_width="100dp"
        android:layout_height="320dp"
        android:layout_marginTop="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_cost" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/from"
        android:theme="@style/ListItemMainStyle"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/to"
        android:theme="@style/ListItemMainStyle"
        app:layout_constraintEnd_toStartOf="@+id/start_point_spinner"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:text="@string/microbus_route"
        android:theme="@style/ListItemMainStyle"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/unselected_microbusses_list"
        android:layout_width="255dp"
        android:layout_height="450dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@+id/end_point_spinner" />

    <Spinner
        android:id="@+id/start_point_spinner"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <Spinner
        android:id="@+id/end_point_spinner"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <LinearLayout
        android:id="@+id/make_route_unselected_empty_case"
        android:layout_width="225dp"
        android:layout_height="323dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/unselected_microbusses_list"
        app:layout_constraintTop_toTopOf="@+id/unselected_microbusses_list">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="107dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="55dp"
            app:srcCompat="@drawable/sad_bus" />

        <TextView
            android:id="@+id/make_empty_case_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_case_message"
            android:theme="@style/ListItemMainStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/make_route_selected_empty_case"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/selected_microbuses_list"
        app:layout_constraintTop_toBottomOf="@+id/route_cost">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:text="@string/selected_empty_case"
            android:theme="@style/ListItemMainStyle" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>