<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        android:theme="@style/ListItemMainStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_item_microbus_pic" />

    <ImageView
        android:id="@+id/list_item_microbus_pic"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_item_microbus_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="TextView"
        android:theme="@style/ListItemSelectedStyle"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/list_item_microbus_pic" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/from"
        android:theme="@style/ListItemMainStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_item_microbus_pic" />

    <TextView
        android:id="@+id/list_item_microbus_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="TextView"
        android:theme="@style/ListItemSelectedStyle"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/list_item_microbus_pic" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/to"
        android:theme="@style/ListItemMainStyle"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/list_item_microbus_pic" />

    <TextView
        android:id="@+id/list_item_microbus_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:text="TextView"
        android:theme="@style/ListItemSelectedStyle"
        app:layout_constraintEnd_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/list_item_microbus_pic" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/cost"
        android:theme="@style/ListItemMainStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_item_microbus_pic" />

    <TextView
        android:id="@+id/list_item_microbus_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="من:3ج ألي:4ج"
        android:textSize="8sp"
        app:layout_constraintEnd_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/list_item_microbus_to" />

    <ImageView
        android:id="@+id/list_item_star"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="@+id/list_item_microbus_pic"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>