<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".choose_your_route">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/from"
        android:theme="@style/ListItemMainStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/to"
        android:theme="@style/ListItemMainStyle"
        app:layout_constraintEnd_toStartOf="@+id/from_spinner"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/choose_empty_case"
        android:layout_width="230dp"
        android:layout_height="327dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="107dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="55dp"
            app:srcCompat="@drawable/sad_bus" />

        <TextView
            android:id="@+id/empty_case_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_case_message"
            android:theme="@style/ListItemMainStyle" />
    </LinearLayout>

    <ListView
        android:id="@+id/choose_your_route_list"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_spinner">

    </ListView>

    <Spinner
        android:id="@+id/from_spinner"
        android:layout_width="130dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/to_spinner"
        android:layout_width="130dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>